deployment/k8s/overlays/prod/keycloak-ha-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: retailstore
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    spec:
      containers:
      - name: keycloak
        # Remove --import-realm: in prod the Terraform runner Job applies the
        # realm after Keycloak is healthy. The realm-config volumeMount and
        # volume are removed via JSON patches in kustomization.yaml.
        args:
        - start
        ports:
        - containerPort: 7800
          name: jgroups
          protocol: TCP
