deployment/k8s/overlays/prod/delete-kafka.yaml
$patch: delete
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: kafka
