deployment/k8s/overlays/prod/delete-postgres.yaml
$patch: delete
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: postgresql
