deployment/k8s/overlays/prod/kafka-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: retailstore
spec:
  $patch: replace
  type: ExternalName
  externalName: kafka-kafka-bootstrap.retailstore.svc.cluster.local
