deployment/k8s/overlays/prod/postgres-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: retailstore
spec:
  $patch: replace
  type: ExternalName
  externalName: postgresql-ha-rw.retailstore.svc.cluster.local
