deployment/k8s/overlays/prod/network-policy-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-apps
  namespace: retailstore
spec:
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - api-gateway
          - retail-store-webapp
          - catalog-service
          - order-service
